# skills

./: README.md
notebooklm-audio-overview/: README.md  pyproject.toml
notebooklm-audio-overview/skills/notebooklm_audio_overview/: __init__.py  adapter.py  cli.py  models.py  skill.py  utils.py
notebooklm-audio-overview/skills/notebooklm_audio_overview/examples/: example_ai_news_first_principles.json  example_input.json  example_resume_input.json
notebooklm-audio-overview/tests/: test_cli.py  test_dedup_behavior.py  test_input_validation.py  test_live_integration.py  test_orchestration.py  test_result_shape.py
setup-project-worklog/: README.md  SKILL.md  reference.md
task-driven-project-bootstrap/: README.md  SKILL.md
task-driven-project-bootstrap/scripts/: bootstrap_task_driven_project.sh
task-driven-project-bootstrap/templates/: AGENTS.md.tpl  PROGRESS.md.tpl  tasks.md.tpl
